add unit to Durée and Montant in loan table

--- a/templates/conventions/prets.html
+++ b/templates/conventions/prets.html
@@ -36,8 +36,8 @@
                                     <tr>
                                         <th scope="col">Numéro</th>
                                         <th scope="col">Date d'octroi</th>
-                                        <th scope="col">Durée</th>
-                                        <th scope="col">Montant {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
+                                        <th scope="col">Durée (en années)</th>
+                                        <th scope="col">Montant (en €) {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
                                         <th scope="col">Préteur</th>
                                         <th scope="col">Préciser le prêteur si 'Autre'</th>
                                     </tr>
