--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -172,8 +172,8 @@
                                                 <tr>
                                                     <th scope="col">Numéro</th>
                                                     <th scope="col">Date d'octroi</th>
-                                                    <th scope="col">Durée</th>
-                                                    <th scope="col">Montant {% include "common/mandatory_field.html" %}</th>
+                                                    <th scope="col">Durée (en années)</th>
+                                                    <th scope="col">Montant (en €) {% include "common/mandatory_field.html" %}</th>
                                                     <th scope="col">Préteur</th>
                                                     <th scope="col">Préciser le prêteur si 'Autre'</th>
                                                 </tr>
