--- a/templates/common/instructeur_presentation.html
+++ b/templates/common/instructeur_presentation.html
@@ -1,6 +1,6 @@
 <h2 class="fr-mt-3w fr-mt-md-5w fr-mb-5w">Instruisez vos conventions APL en quelques clics</h2>
 <p class="fr-mb-3w">
-    Via APpeL retrouvez l'ensemble des conventions APL que vous devez instruire.
+    Via APiLos retrouvez l'ensemble des conventions APL que vous devez instruire.
 </p>
 <p class="fr-mb-3w">
     Gardez le contact avec les bailleurs, profitez de l'outil de génération des conventions APL pour vous concentrer sur l'essentiel.
