--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -9,7 +9,7 @@
 
         <!--Title and desc-->
 
-        <title>{% block page_title %}APpeL, la plateforme de conventionement des logements sociaux{% endblock%}</title>
+        <title>{% block page_title %}APiLoss, la plateforme de conventionement des logements sociaux{% endblock%}</title>
         <meta name="description" content="{% block page_description %}Plateforme prmettant d'instruire des conventionnnement de logements sociaux en France{% endblock %}">
 
         <!--Favicon-->
