--- a/templates/layout/footer.html
+++ b/templates/layout/footer.html
@@ -11,7 +11,7 @@
             </div>
             <div class="fr-footer__content">
                 <p class="fr-footer__content-desc">
-                    APpeL est une startup d'état de l'incubateur beta.gouv.fr sous la direction de
+                    APiLos est une startup d'état de l'incubateur beta.gouv.fr sous la direction de
                     la fabrique du numérique dépendant du ministère du développement durable.
                     <br>L'objectif est de promouvoir la construction des logement sociaux, réduire
                     l'insécurité locative et publier des staitistiques fiables permettant le pilotage
