--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,7 +8,7 @@
 
     {% if next and user.is_authenticated %}
         <p>Vous n'avez pas accès à cette page.</p>
-        <p>Merci de vous connecter avec un compte qui a des droits suffisant ou raprochez vous de votre contact APpeL.</p>
+        <p>Merci de vous connecter avec un compte qui a des droits suffisant ou raprochez vous de votre contact APiLos.</p>
     {% endif %}
 
     <div class="fr-container-fluid ds_banner">
