--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -12,7 +12,7 @@
                             </p>
                         </div>
                         <div class="fr-header__operator">
-                            <img src="{% static "img/appel_logo.png" %}" class="fr-responsive-img" style="width:5rem;" alt="APpeL, conventionnement APL" />
+                            <img src="{% static "img/apilos_logo.png" %}" class="fr-responsive-img" style="width:5rem;" alt="APiLos, conventionnement APL" />
                             <!-- L’alternative de l’image (attribut alt) doit impérativement être renseignée et reprendre le texte visible dans l’image -->
                         </div>
                         <div class="fr-header__navbar">
@@ -24,8 +24,8 @@
                         </div>
                     </div>
                     <div class="fr-header__service">
-                        <a href="/" title="Accueil - APpeL">
-                            <p class="fr-header__service-title">APpeL</p>
+                        <a href="/" title="Accueil - APiLos">
+                            <p class="fr-header__service-title">APiLos</p>
                         </a>
                         <p class="fr-header__service-tagline">Le portail qui pré-remplit les conventions APL pour les bailleurs sociaux</p>
                     </div>
@@ -45,7 +45,7 @@
                                         </button>
                                     </li>
                                     <li>
-                                        <a class="fr-link" href="//docs.appel.beta.gouv.fr" target="_blank" rel="noopener">
+                                        <a class="fr-link" href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
                                             <span class="fr-fi-question-line" aria-hidden="true"></span>
                                         </a>
                                     </li>
@@ -62,7 +62,7 @@
                                         </button>
                                     </li>
                                     <li>
-                                        <a class="fr-link" href="//docs.appel.beta.gouv.fr" target="_blank" rel="noopener">
+                                        <a class="fr-link" href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
                                             <span class="fr-fi-question-line" aria-hidden="true"></span>
                                         </a>
                                     </li>
