--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -4,4 +4,4 @@ Vous avez demander la réinitialisation de votre mot de passe associé au courri
 Veuillez suivre le lien :
 {{ protocol}}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 
-L'équipe APpeL
+L'équipe APiLos
