--- a/templates/layout/footer.html
+++ b/templates/layout/footer.html
@@ -14,7 +14,7 @@
                     APiLos est une startup d'état de l'incubateur beta.gouv.fr sous la direction de
                     la fabrique du numérique dépendant du ministère du développement durable.
                     <br>L'objectif est de promouvoir la construction des logement sociaux, réduire
-                    l'insécurité locative et publier des staitistiques fiables permettant le pilotage
+                    l'insécurité locative et publier des statistiques fiables permettant le pilotage
                     éclairé de la politique de logement en France.
                 </p>
                 <ul class="fr-footer__content-list">
