--- a/templates/conventions/programme.html
+++ b/templates/conventions/programme.html
@@ -11,6 +11,7 @@
                         {% include "common/convention_edit_info.html" with convention=convention %}
                         {% include "common/mandatory_fields_info.html" %}
 
+                        {% include "common/form/input_text.html" with form_input=form.nom label="Nom du programme" mandatory=True %}
                         {% include "common/form/input_text.html" with form_input=form.adresse label="Adresse" mandatory=True %}
 
                         <div class="fr-mb-2w">
