--- a/templates/common/form/input_number.html
+++ b/templates/common/form/input_number.html
@@ -1,19 +1,29 @@
 
 {% load l10n %}
-<input
-    class="fr-input {% if form_input.errors %}fr-input--error{% endif %}"
-    pattern="[0-9]*"
-    min=0
-    step="{% if step %}{{step}}{% else %}1{% endif %}"
-    {% if onchange %}onchange="{{onchange}}"{% endif %}
-    inputmode="numeric"
-    {% if form_input.errors %}aria-describedby="text-input-error-desc-error"{% endif %}
-    type="number"
-    id="{{form_input.id_for_label}}"
-    name="{{form_input.html_name}}"
-    value="{{ form_input.value|unlocalize|default_if_none:'' }}">
-{% for error in form_input.errors %}
-    <p id="text-input-error-desc-error" class="fr-error-text">
-        {{ error }}
-    </p>
-{% endfor %}
+<div class="fr-input-group {% if form_input.errors %}fr-select-group--error{% endif %}">
+    {% if label %}
+        <label class="fr-label" for="{{form_input.id_for_label}}">
+            {{ label }}{% if mandatory %}&nbsp;{% include "common/mandatory_field.html" %}{% endif %}
+        </label>
+    {% endif %}
+    <input
+        class="fr-input {% if form_input.errors %}fr-input--error{% endif %}"
+        pattern="[0-9]*"
+        min=0
+        step="{% if step %}{{step}}{% else %}1{% endif %}"
+        {% if onchange %}onchange="{{onchange}}"{% endif %}
+        inputmode="numeric"
+        {% if form_input.errors %}aria-describedby="text-input-error-desc-error"{% endif %}
+        type="number"
+        id="{{form_input.id_for_label}}"
+        name="{{form_input.html_name}}"
+        value="{{ form_input.value|unlocalize|default_if_none:'' }}">
+    {% for error in form_input.errors %}
+        <p id="text-input-error-desc-error" class="fr-error-text">
+            {{ error }}
+        </p>
+    {% endfor %}
+</div>
+
+
+
