capital_social is a float

--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -19,7 +19,7 @@
                                     {% include "common/form/input_text.html" with form_input=form.siret label="SIRET ou SIREN" mandatory=True %}
                                 </div>
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
-                                    {% include "common/form/input_text.html" with form_input=form.capital_social label="Capital social" mandatory=False %}
+                                    {% include "common/form/input_number.html" with step="0.01" form_input=form.capital_social label="Capital social" mandatory=False %}
                                 </div>
                             </div>
                         </div>
