m² instead of m2

--- a/templates/conventions/logements.html
+++ b/templates/conventions/logements.html
@@ -40,7 +40,7 @@
                                         <th scope="col" style='min-width:120px;'>Surface des annexes réelle {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
                                         <th scope="col" style='min-width:120px;'>Surface des annexes retenue dans la SU {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
                                         <th scope="col" style='min-width:120px;'>Surface Utile {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
-                                        <th scope="col" style='min-width:120px;'>Loyer maxinum en € par m2 de surface utile {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
+                                        <th scope="col" style='min-width:120px;'>Loyer maxinum en € par m² de surface utile {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
                                         <th scope="col" style='min-width:120px;'>Coefficient propre au logement {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
                                         <th scope="col" style='min-width:120px;'>Loyer maxinum du logement en € {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
                                     </tr>
