--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -226,7 +226,7 @@
                                                     <th scope="col" style='min-width:120px;'>Surface des annexes réelle {% include "common/mandatory_field.html" %}</th>
                                                     <th scope="col" style='min-width:120px;'>Surface des annexes retenue dans la SU {% include "common/mandatory_field.html" %}</th>
                                                     <th scope="col" style='min-width:120px;'>Surface Utile {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col" style='min-width:120px;'>Loyer maxinum en € par m2 de surface utile {% include "common/mandatory_field.html" %}</th>
+                                                    <th scope="col" style='min-width:120px;'>Loyer maxinum en € par m² de surface utile {% include "common/mandatory_field.html" %}</th>
                                                     <th scope="col" style='min-width:120px;'>Coefficient propre au logement {% include "common/mandatory_field.html" %}</th>
                                                     <th scope="col" style='min-width:120px;'>Loyer maxinum du logement en € {% include "common/mandatory_field.html" %}</th>
                                                 </tr>
