add acte_notarial and rename acte_de_vente to acte_de_propriete

--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -75,7 +75,8 @@
                                     {% include "common/display_field_if_exists.html" with label="Acquéreur" value=programme.acquereur %}
                                     {% include "common/display_field_if_exists.html" with label="Référence du notaire" value=programme.reference_notaire %}
                                     {% include "common/display_field_if_exists.html" with label="Référence de publication de l'acte" value=programme.reference_publication_acte %}
-                                    {% include "common/display_field_if_exists.html" with label="Acte de propriété" value=programme.acte_de_vente %}
+                                    {% include "common/display_field_if_exists.html" with label="Acte de propriété" value=programme.acte_de_propriete %}
+                                    {% include "common/display_field_if_exists.html" with label="Acte de propriété" value=programme.acte_notarial %}
                                 </div>
                             </div>
                         </div>
