--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -73,9 +73,16 @@
                             {% include "common/form/input_textarea.html" with form_input=form.reference_publication_acte rows=5 %}
                         </div>
 
-                        <div class="fr-input-group {% if form.acte_de_vente.errors %}fr-select-group--error{% endif %}">
-                            <label class="fr-label fr-mb-1w" for="{{form.acte_de_vente.id_for_label}}">
+                        <div class="fr-input-group {% if form.acte_de_propriete.errors %}fr-select-group--error{% endif %}">
+                            <label class="fr-label fr-mb-1w" for="{{form.acte_de_propriete.id_for_label}}">
                                 Acte de propriété
+                            </label>
+                            {% include "common/form/input_upload_button.html" with textarea=False %}
+                        </div>
+
+                        <div class="fr-input-group {% if form.acte_notarial.errors %}fr-select-group--error{% endif %}">
+                            <label class="fr-label fr-mb-1w" for="{{form.acte_notarial.id_for_label}}">
+                                Acte notarial
                             </label>
                             {% include "common/form/input_upload_button.html" with textarea=False %}
                         </div>
