Add an image to the first page of the application

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,9 @@
                     </p>
                 </div>
                 <div class="fr-col-12 fr-col-lg-5 fr-pl-0 fr-pl-md-4w fr-pb-0">
-                    <figure class="fr-content-media fr-my-0">
+                    <figure class="fr-content-media fr-m-auto">
                         <div class="fr-content-media__img">
+                            <img src="{% static "img/accueil.jpg" %}"/>
                         </div>
                     </figure>
                 </div>
