--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -73,12 +73,29 @@
                             {% include "common/form/input_textarea.html" with form_input=form.reference_publication_acte rows=5 %}
                         </div>
 
-                        <div class="fr-input-group {% if form.acte_de_vente.errors %}fr-select-group--error{% endif %}">
-                            <label class="fr-label fr-mb-1w" for="{{form.acte_de_vente.id_for_label}}">
-                                Acte de propriété
-                            </label>
-                            {% include "common/form/input_upload_button.html" with textarea=False %}
+
+
+                        <div class="fr-mb-2w">
+                            <div class="fr-grid-row fr-grid-row--gutters">
+                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+                                    <div class="fr-input-group {% if form.acte_de_propriete.errors %}fr-select-group--error{% endif %}">
+                                        <label class="fr-label fr-mb-1w" for="{{form.acte_de_propriete.id_for_label}}">
+                                            Acte de propriété
+                                        </label>
+                                        {% include "common/form/input_upload_button.html" with textarea=False %}
+                                    </div>
+                                </div>
+                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
+                                    <div class="fr-input-group {% if form.acte_notarial.errors %}fr-select-group--error{% endif %}">
+                                        <label class="fr-label fr-mb-1w" for="{{form.acte_notarial.id_for_label}}">
+                                            Acte notarial
+                                        </label>
+                                        {% include "common/form/input_upload_button.html" with textarea=False %}
+                                    </div>
+                                </div>
+                            </div>
                         </div>
+
 
                         <hr class="fr-col-12 fr-my-3w">
 
