--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -9,8 +9,8 @@
 
         <!--Title and desc-->
 
-        <title>{% block page_title %}, la plateforme de conventionement des logements sociaux{% endblock%}</title>
-        <meta name="description" content="{% block page_description %}Plateforme prmettant d'instruire des conventionnnement de logements sociaux en France{% endblock %}">
+        <title>{% block page_title %}APiLos, la plateforme de conventionement des logements sociaux{% endblock%}</title>
+        <meta name="description" content="{% block page_description %}Plateforme permettant d'instruire des conventionnnements de logements sociaux en France{% endblock %}">
 
         <!--Favicon-->
 
