--- a/templates/conventions/saved.html
+++ b/templates/conventions/saved.html
@@ -5,9 +5,20 @@
         <div class="fr-container">
             <div class="fr-grid-row fr-grid-row--gutters">
                 <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
-                    <h2>Merci</h2>
-                    {% include "common/convention_edit_info.html" with convention=convention %}
-                    <p class="fr-mb-3w">La convention est enregistrée, vous pouvez la soumettre à n'importe quel moment</p>
+                    <h2>Votre convention a été enregistrée !</h2>
+                    <p class="fr-mb-3w">
+                        <span style="font-style: italic;">Référence de la convention : {{convention}}</span>
+                    </p>
+                    <p class="fr-mb-3w fr-p-3w" style="border-radius: 25px;border: 2px solid #E10600;background:#dacbca;font-size:bold;">
+                        <b>ATTENTION</b> : le document de convention n'est pas encore soumis à l'instruction
+                    </p>
+                    <p class="fr-mb-3w">La convention est enregistrée mais n'est pas encore soumise au service instructeur,
+                        vous pouvez la soumettre à n'importe quel moment en l'éditant de nouveau et en cliquant sur le bouton
+                        <b>"Soumettre au service instructeur"</b> sur l'écran de récapitulatif.
+                    </p>
+                    <p class="fr-mb-3w">Nous restons à votre disposition pour toute information et question.</p>
+                    <p class="fr-mb-3w">En vous remerciant, nous vous souhaitons une bonne journée</p>
+                    <p class="fr-mb-3w">L'équipe <a href="mailto:contact@apilos.beta.gouv.fr" target="_blank">APiLos</a></p>
 
                 </div>
             </div>
