--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -1,4 +1,5 @@
-{% load static %}
+{% load static dsfr_tags %}
+
 <!DOCTYPE html>
 <html lang="fr">
     <head>
@@ -14,14 +15,11 @@
 
         <!--Favicon-->
 
-        <link rel="apple-touch-icon" href="{% static "dsfr/favicons/apple-touch-icon.png" %}"><!-- 180×180 -->
-        <link rel="icon" href="{% static "dsfr/favicons/favicon.svg" %}" type="image/svg+xml">
-        <link rel="shortcut icon" href="{% static "dsfr/favicons/favicon.ico" %}" type="image/x-icon"><!-- 32×32 -->
-        <link rel="manifest" href="{% static "dsfr/favicons/manifest.webmanifest" %}" crossorigin="use-credentials">
+        {% dsfr_favicon %}
 
         <!--Css-->
 
-        <link rel="stylesheet" href="{% static "dsfr/css/dsfr.min.css" %}">
+        {% dsfr_css %}
         <link rel="stylesheet" href="{% static "css/main.css" %}">
 
         {% block javascript_extras %}{% endblock %}
